[package]
name = "begone"
version = "0.1.0"
authors = ["Rounak Sen <103501472+rony0000013@users.noreply.github.com>"]
edition = "2024"
description = "A CLI tool to clean up project directories by removing build artifacts and dependencies"
repository = "https://github.com/rony0000013/begone-cli"
license-file = "LICENSE"
readme = "README.md"
keywords = ["cleanup", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
colored = "3.0.0"
log = "0.4"
env_logger = "0.11"
